# AI-Support-Backend

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/contactsupport/: __init__.py  main.py
src/contactsupport/config/: __init__.py  database.py
src/contactsupport/controllers/: __init__.py  support_message_controller.py
src/contactsupport/middleware/: __init__.py  error_handler.py
src/contactsupport/models/: __init__.py  support_message.py
src/contactsupport/routes/: __init__.py  support_message_routes.py
src/contactsupport/scripts/: __init__.py  create_table.sql  execute_sql.py  init_db.py
src/contactsupport/utils/: __init__.py  ai_agent.py  faq_knowledge_base.py  validators.py
